# omni-stack-backend-boilerplate-fastapi

./: .env.example  .gitignore  404.html  CLAUDE.md  LICENSE  Makefile  README.md  alembic.ini  fly.toml  index.html  mkdocs.yml  pyproject.toml  railway.toml  render.yaml  runcommand.md  sitemap.xml
.github/workflows/: ci.yml  deploy.yml  security.yml
API-REFERENCE/: index.html
ARCHITECTURE/: index.html
CONTRIBUTING/: index.html
FRONTEND-INTEGRATION/: index.html
GETTING-STARTED/: index.html
MODULAR-GUIDE/: index.html
app/: main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/admin/: dashboard.py  feature_flags.py  impersonate.py  jobs.py  usage.py  users.py
app/api/v1/app/: ai.py  billing.py  files.py  projects.py  (+3 more)
app/api/v2/: __init__.py  router.py
app/business/: billing_service.py  crud_base.py  iap_service.py  project_service.py  user_service.py
app/core/: cache.py  config.py  db.py  exceptions.py  feature_flags.py  logging.py  metrics.py  middleware.py  security.py  sentry.py  tracing.py  versioning.py
app/jobs/: __init__.py  decorators.py  email_jobs.py  report_jobs.py  worker.py
app/models/: audit_log.py  base.py  compat.py  contact_submission.py  feature_flag.py  file.py  project.py  usage_record.py  user.py  webhook_event.py
app/schemas/: ai.py  common.py  file.py  project.py  user.py
app/services/ai/: __init__.py  anthropic_provider.py  base.py  factory.py  gemini_provider.py  openai_provider.py  router.py
app/services/email/: __init__.py  base.py  console_provider.py  factory.py  renderer.py  resend_provider.py  sendgrid_provider.py
app/services/payments/: __init__.py  apple_iap_service.py  google_iap_service.py  stripe_service.py  usage.py
app/services/storage/: __init__.py  base.py  cloudinary_provider.py  factory.py  local_provider.py  r2_provider.py  s3_provider.py
app/services/websocket/: __init__.py  events.py  manager.py
app/utils/: crypto.py  pagination.py  resilience.py  validators.py
docker/: Dockerfile  Dockerfile.dev  docker-compose.yml
docs/: BACKUP.md  DEPLOYMENT.md  omnistack-gap-analysis.md  omnistack-prd.md  omnistack-technical-prd.md
docs/audit/: AUDIT-SUMMARY.md  CHANGELOG.md  ERROR-TRACKER.md
docs/implementation/: Apple-Andriod-Webhook.md  MASTER-TRACKER.md  phase-1-foundation.md  phase-10-deployment.md  phase-11-documentation.md  phase-12-advanced-features.md  phase-2-authentication.md  phase-3-crud-patterns.md  phase-4-middleware-security.md  phase-5-background-jobs.md  phase-6-external-services.md  phase-7-ai-gateway.md  phase-8-payments.md  phase-9-testing.md
documentation/: API-REFERENCE.md  ARCHITECTURE.md  CONTRIBUTING.md  FRONTEND-INTEGRATION.md  GETTING-STARTED.md  MODULAR-GUIDE.md  index.md
grafana/: README.md
grafana/dashboards/: api-overview.json  business-metrics.json  database-redis.json
migrations/: env.py
migrations/versions/: 20260110_170702_add_user_model.py  20260110_172711_add_project_model.py  20260110_190853_add_file_model.py  20260110_210000_add_webhook_event_model.py  20260110_220000_add_mobile_iap_fields.py  20260111_100000_add_audit_log_and_feature_flag_models.py  20260111_120000_add_contact_submission_model.py
scripts/: migrate_production.py
search/: search_index.json
tests/: conftest.py
tests/integration/: test_api_billing.py  test_api_health.py  test_api_projects.py  test_api_users.py
tests/load/: locustfile.py
tests/unit/: test_admin_dashboard.py  test_apple_iap.py  test_billing.py  test_contact.py  test_google_iap.py  test_health.py  test_jobs.py  test_metrics.py  test_middleware.py  test_sqlite_fallback.py  test_tracing.py  test_usage.py  test_versioning.py  test_webhooks.py  test_websocket.py
(+13 files in other folders)
