[project]
name = "omnistack-backend"
version = "0.1.0"
description = "Production-ready FastAPI backend boilerplate for SaaS applications"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "OmniStack", email = "hello@omnistack.dev" }]
keywords = ["fastapi", "backend", "saas", "boilerplate", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]

dependencies = [
    # FastAPI & Server
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Database
    "sqlmodel>=0.0.22",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "greenlet>=3.0.0",
    # Settings & Validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    # Redis & Cache
    "redis>=5.2.0",
    # HTTP Client
    "httpx>=0.28.0",
    # Auth / JWT
    "PyJWT>=2.9.0",
    "cryptography>=43.0.0",
    # Background Jobs
    "arq>=0.26.0",
    # Utilities
    "python-multipart>=0.0.12",
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "aiosqlite>=0.20.0",
    # Linting & Formatting
    "ruff>=0.7.0",
    # Type checking
    "mypy>=1.13.0",
]
ai = [
    "openai>=1.55.0",
    "anthropic>=0.39.0",
]
email = [
    "resend>=2.5.0",
    "sendgrid>=6.11.0",
    "jinja2>=3.1.0",
]
storage = [
    "aioboto3>=13.0.0",
    "cloudinary>=1.41.0",
]
payments = [
    "stripe>=11.2.0",
]
observability = [
    "sentry-sdk[fastapi]>=2.18.0",
]
all = [
    "omnistack-backend[dev,ai,email,storage,payments,observability]",
]

[project.urls]
homepage = "https://github.com/omnistack/backend-boilerplate-fastapi"
documentation = "https://github.com/omnistack/backend-boilerplate-fastapi#readme"
repository = "https://github.com/omnistack/backend-boilerplate-fastapi"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# Ruff Configuration
[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "migrations/versions",
    ".pytest_cache",
    ".ruff_cache",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from inside except
    "ARG001", # unused function argument
    "UP046", # Generic class uses Generic subclass instead of type parameters
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

# Pytest Configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
filterwarnings = [
    "ignore::DeprecationWarning",
]
addopts = "-v --tb=short"

# MyPy Configuration
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
